[tool.poetry]
name = "email machine learning project"
version = "0.1.0"
description = ""
authors = ["Catalin Bondari <catalin.bondari2@mail.dcu.ie>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
matplotlib = "^3.8.4"
scikit-learn = "^1.4.1.post1"
tqdm = "^4.66.2"
wordcloud = "^1.9.3"
seaborn = "^0.13.2"
xgboost = "^2.0.3"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
